llm-d/ai-grid/maas/site-a/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  labels:
    istio.io/rev: openshift-gateway
  name: maas-site-a-gateway
  namespace: openshift-ingress
spec:
  gatewayClassName: data-science-gateway-class
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    hostname: "site-a.apps.{domain}"
    name: https
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ''
        kind: Secret
        name: maas-site-a-gateway-tls
      mode: Terminate
